# kratky

./: LICENSE.txt  pyproject.toml
accounts/: urls.py  views.py
accounts/migrations/: 0001_initial.py
application/: settings.py  urls.py
kits/: urls.py
pages/: views.py
templates/: base.html  home.html
templates/pages/: home.html
templates/registration/: login.html  signup.html
